# determinant

./: CMakeLists.txt  README.md  input.txt  input2.txt  main.cpp  matrix.cpp  matrix.hpp
matrices/: matrix10-1.txt  matrix10-2.txt  matrix10-3.txt  matrix10.txt  matrix100-1.txt  matrix100-2.txt  matrix100-3.txt  matrix100.txt  matrix1000-1.txt  matrix1000-2.txt  matrix1000-3.txt  matrix1000.txt  matrix500-1.txt  matrix500-2.txt  matrix500-3.txt  matrix500.txt
